<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#283150"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/ll_weather_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40">

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/voltaire"
            android:text="@string/tv_today"
            android:textColor="#fafcfb"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/voltaire"
            android:text="@string/placeholder_temp_description"
            android:textColor="#fafcfb"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/voltaire"
            android:text="@string/placeholder_temp"
            android:textColor="#fafcfb"
            android:textSize="135sp" />

        <TextView
            android:id="@+id/tv_date_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/voltaire"
            android:text="@string/placeholder_last_updated"
            android:textColor="#fafcfb"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_forecast"
        android:fontFamily="@font/voltaire"
        android:text="@string/btn_forecast_label"
        android:textColor="#283150"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_refresh"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_refresh"
        android:contentDescription="@string/refresh_button_description"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_refresh"
        app:layout_constraintEnd_toEndOf="@+id/btn_refresh"
        app:layout_constraintStart_toStartOf="@+id/btn_refresh"
        app:layout_constraintTop_toTopOf="@+id/btn_refresh" />

</androidx.constraintlayout.widget.ConstraintLayout>